--- a/index.html
+++ b/index.html
@@ -1,9 +1,266 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- шапка -->
+    <header>
+      <nav>
+        <a href="" lang="en">Web Studio</a>
+
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./image/mail_head.svg" alt="электронная почта" />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <img src="./image/smartphone_head.svg" alt="телефон" />
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <!-- банер (герой) -->
+      <div>
+        <section>
+          <h1>эффективные решения для вашего бизнеса</h1>
+          <a href="">Заказать услугу</a>
+        </section>
+      </div>
+
+      <!--Особенность комании-->
+      <section>
+        <!--Скрыть "Особенность"-->
+        <h2>Особенность</h2>
+        <ul>
+          <li>
+            <img src="./image/antenna01.svg" alt="Внимание к деталям" />
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <img src="./image/clock01.svg" alt="Пунктуальность" />
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <img src="./image/diagram01.svg" alt="Планирование" />
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <img src="./image/astronaut01.svg" alt="Современные технологии" />
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./image/image01.jpg"
+              alt="Десктопные приложения"
+              width="380"
+            />
+            <p>Десктопные приложения</p>
+          </li>
+          <li>
+            <img
+              src="./image/image02.jpg"
+              alt="Мобильные приложения"
+              width="380"
+            />
+            <p>Мобильные приложения</p>
+          </li>
+          <li>
+            <img
+              src="./image/image03.jpg"
+              alt="Дизайнерские решения"
+              width="380"
+            />
+            <p>Дизайнерские решения</p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./image/photo01.jpg" alt="John Smith" width="278" />
+            <h3>John Smith</h3>
+            <p>Product Designer</p>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./image/instagram01.svg" alt="instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/twitter01.svg" alt="twitter" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/facebook01.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/linkedin01.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./image/photo02.jpg" alt="Marta Stewart" width="278" />
+            <h3>Marta Stewart</h3>
+            <p>Frontend Developer</p>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./image/instagram01.svg" alt="instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/twitter01.svg" alt="twitter" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/facebook01.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/linkedin01.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./image/photo03.jpg" alt="Robert Jakis" width="278" />
+            <h3>Robert Jakis</h3>
+            <p>Marketing</p>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./image/instagram01.svg" alt="instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/twitter01.svg" alt="twitter" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/facebook01.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/linkedin01.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./image/photo04.jpg" alt="Martin Doe" width="278" />
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./image/instagram01.svg" alt="instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/twitter01.svg" alt="twitter" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/facebook01.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./image/linkedin01.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+
+      <!--Постоянные клиенты-->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_01.svg" alt="Клиент №1" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_02.svg" alt="Клиент №2" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_03.svg" alt="Клиент №3" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_04.svg" alt="Клиент №4" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_05.svg" alt="Клиент №5" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./image/logo_client_06.svg" alt="Клиент №6" />
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
