Убрал иконки соц.сетей "Наша команда"
Убрал иконки соц.сетей (инстаграм, фейсбук, твиттер, линкидин) в разделе "Наша команда". Заменил aria-label

--- a/index.html
+++ b/index.html
@@ -119,24 +119,16 @@
             <p>Product Designer</p>
             <ul>
               <li>
-                <a href="">
-                  <img src="./image/instagram01.svg" alt="instagram" />
-                </a>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/twitter01.svg" alt="twitter" />
-                </a>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/facebook01.svg" alt="facebook" />
-                </a>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/linkedin01.svg" alt="linkedin" />
-                </a>
+                <a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -146,24 +138,16 @@
             <p>Frontend Developer</p>
             <ul>
               <li>
-                <a href="">
-                  <img src="./image/instagram01.svg" alt="instagram" />
-                </a>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/twitter01.svg" alt="twitter" />
-                </a>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/facebook01.svg" alt="facebook" />
-                </a>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/linkedin01.svg" alt="linkedin" />
-                </a>
+                <a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -173,24 +157,16 @@
             <p>Marketing</p>
             <ul>
               <li>
-                <a href="">
-                  <img src="./image/instagram01.svg" alt="instagram" />
-                </a>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/twitter01.svg" alt="twitter" />
-                </a>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/facebook01.svg" alt="facebook" />
-                </a>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/linkedin01.svg" alt="linkedin" />
-                </a>
+                <a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -200,24 +176,16 @@
             <p>UI Designer</p>
             <ul>
               <li>
-                <a href="">
-                  <img src="./image/instagram01.svg" alt="instagram" />
-                </a>
+                <a href="" aria-label="Ссылка на Instagram">Instagram</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/twitter01.svg" alt="twitter" />
-                </a>
+                <a href="" aria-label="Ссылка на Twitter">Twitter</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/facebook01.svg" alt="facebook" />
-                </a>
+                <a href="" aria-label="Ссылка на Facebook">Facebook</a>
               </li>
               <li>
-                <a href="">
-                  <img src="./image/linkedin01.svg" alt="linkedin" />
-                </a>
+                <a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a>
               </li>
             </ul>
           </li>
