--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
       </div>
 
-      <!--Особенность комании-->
+      <!--Раздел "Особенность комании"-->
       <section>
         <!--Скрыть "Особенность"-->
         <h2>Особенность</h2>
@@ -78,7 +78,7 @@
         </ul>
       </section>
 
-      <!--Чем мы занимаемся-->
+      <!--Раздел "Чем мы занимаемся"-->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
@@ -109,7 +109,7 @@
         </ul>
       </section>
 
-      <!--Наша команда-->
+      <!--Раздел "Наша команда"-->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -192,7 +192,7 @@
         </ul>
       </section>
 
-      <!--Постоянные клиенты-->
+      <!--Раздел "Постоянные клиенты"-->
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
@@ -229,6 +229,40 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+
+    <!--Футер-->
+    <footer>
+      <!-- Адресс компании -->
+      <a href="">Web Studio</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26 <br />
+        info@example.com<br />
+        +38 099 111 11 11
+      </address>
+
+      <!-- Перечень соц.сетей сайта -->
+      <b>присоединяйтесь</b>
+      <ul>
+        <li>
+          <a href="" aria-label="Ссылка на Instagram">Instagram</a>
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Twitter">Twitter</a>
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на Facebook">Facebook</a>
+        </li>
+        <li>
+          <a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a>
+        </li>
+      </ul>
+
+      <!-- Форма подписки на рассылку через почту -->
+      <b>Подпишитесь на рассылку</b>
+      <!-- вставить форму -->
+
+      <!-- Подпись разработчика -->
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
