--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <section>
         <!--Скрыть "Особенность"-->
         <h2>Особенность</h2>
+        <!--При наведении на иконку/картинку, она меняет цвет.-->
+        <!--В дальнейшем это будет выполнятся через CSS.-->
+        <!--Возможно необходимо будет заменить на "aria-label" в ссылке-->
         <ul>
           <li>
             <img src="./image/antenna01.svg" alt="Внимание к деталям" />
@@ -87,6 +90,7 @@
               src="./image/image01.jpg"
               alt="Десктопные приложения"
               width="380"
+              height="294"
             />
             <p>Десктопные приложения</p>
           </li>
@@ -95,6 +99,7 @@
               src="./image/image02.jpg"
               alt="Мобильные приложения"
               width="380"
+              height="294"
             />
             <p>Мобильные приложения</p>
           </li>
@@ -103,6 +108,7 @@
               src="./image/image03.jpg"
               alt="Дизайнерские решения"
               width="380"
+              height="294"
             />
             <p>Дизайнерские решения</p>
           </li>
@@ -114,7 +120,12 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./image/photo01.jpg" alt="John Smith" width="278" />
+            <img
+              src="./image/photo01.jpg"
+              alt="John Smith"
+              width="278"
+              height="260"
+            />
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
@@ -133,7 +144,12 @@
             </ul>
           </li>
           <li>
-            <img src="./image/photo02.jpg" alt="Marta Stewart" width="278" />
+            <img
+              src="./image/photo02.jpg"
+              alt="Marta Stewart"
+              width="278"
+              height="260"
+            />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
@@ -152,7 +168,12 @@
             </ul>
           </li>
           <li>
-            <img src="./image/photo03.jpg" alt="Robert Jakis" width="278" />
+            <img
+              src="./image/photo03.jpg"
+              alt="Robert Jakis"
+              width="278"
+              height="260"
+            />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
@@ -171,7 +192,12 @@
             </ul>
           </li>
           <li>
-            <img src="./image/photo04.jpg" alt="Martin Doe" width="278" />
+            <img
+              src="./image/photo04.jpg"
+              alt="Martin Doe"
+              width="278"
+              height="260"
+            />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
