--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </ul>
         <ul>
           <li>
-            <img src="./image/mail_head.svg" alt="электронная почта" />
+            <img src="./images/mail-head.svg" alt="электронная почта" />
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <img src="./image/smartphone_head.svg" alt="телефон" />
+            <img src="./images/smartphone-head.svg" alt="телефон" />
             <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -47,7 +47,7 @@
         <!--Возможно необходимо будет заменить на "aria-label" в ссылке-->
         <ul>
           <li>
-            <img src="./image/antenna01.svg" alt="Внимание к деталям" />
+            <img src="./images/antenna01.svg" alt="Внимание к деталям" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -55,7 +55,7 @@
             </p>
           </li>
           <li>
-            <img src="./image/clock01.svg" alt="Пунктуальность" />
+            <img src="./images/clock01.svg" alt="Пунктуальность" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -63,7 +63,7 @@
             </p>
           </li>
           <li>
-            <img src="./image/diagram01.svg" alt="Планирование" />
+            <img src="./images/diagram01.svg" alt="Планирование" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -71,7 +71,7 @@
             </p>
           </li>
           <li>
-            <img src="./image/astronaut01.svg" alt="Современные технологии" />
+            <img src="./images/astronaut01.svg" alt="Современные технологии" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -87,7 +87,7 @@
         <ul>
           <li>
             <img
-              src="./image/image01.jpg"
+              src="./images/image01.jpg"
               alt="Десктопные приложения"
               width="380"
               height="294"
@@ -96,7 +96,7 @@
           </li>
           <li>
             <img
-              src="./image/image02.jpg"
+              src="./images/image02.jpg"
               alt="Мобильные приложения"
               width="380"
               height="294"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="./image/image03.jpg"
+              src="./images/image03.jpg"
               alt="Дизайнерские решения"
               width="380"
               height="294"
@@ -121,7 +121,7 @@
         <ul>
           <li>
             <img
-              src="./image/photo01.jpg"
+              src="./images/photo01.jpg"
               alt="John Smith"
               width="278"
               height="260"
@@ -145,7 +145,7 @@
           </li>
           <li>
             <img
-              src="./image/photo02.jpg"
+              src="./images/photo02.jpg"
               alt="Marta Stewart"
               width="278"
               height="260"
@@ -169,7 +169,7 @@
           </li>
           <li>
             <img
-              src="./image/photo03.jpg"
+              src="./images/photo03.jpg"
               alt="Robert Jakis"
               width="278"
               height="260"
@@ -193,7 +193,7 @@
           </li>
           <li>
             <img
-              src="./image/photo04.jpg"
+              src="./images/photo04.jpg"
               alt="Martin Doe"
               width="278"
               height="260"
@@ -224,32 +224,32 @@
         <ul>
           <li>
             <a href="">
-              <img src="./image/logo_client_01.svg" alt="Клиент №1" />
+              <img src="./images/logo-client-01.svg" alt="Клиент №1" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./image/logo_client_02.svg" alt="Клиент №2" />
+              <img src="./images/logo-client-02.svg" alt="Клиент №2" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./image/logo_client_03.svg" alt="Клиент №3" />
+              <img src="./images/logo-client-03.svg" alt="Клиент №3" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./image/logo_client_04.svg" alt="Клиент №4" />
+              <img src="./images/logo-client-04.svg" alt="Клиент №4" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./image/logo_client_05.svg" alt="Клиент №5" />
+              <img src="./images/logo-client-05.svg" alt="Клиент №5" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./image/logo_client_06.svg" alt="Клиент №6" />
+              <img src="./images/logo-client-06.svg" alt="Клиент №6" />
             </a>
           </li>
         </ul>
